--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "downshift": "^6.1.7",
+    "emotion": "^9.1.3",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
+    "match-sorter": "4.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emotion": "^9.1.3",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "starwars-names": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
