--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
     "downshift": "^6.1.7",
     "emotion": "^9.1.3",
     "json-server": "^0.17.0",
