--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.25.0",
     "downshift": "^6.1.7",
     "emotion": "^9.1.3",
+    "iso-3166-1": "^2.1.0",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "match-sorter": "4.2",
